# HACKNC2024

./: .gitignore  README.md
backend/: app.py  pyproject.toml
backend/src/API/: __init__.py  routes.py
backend/src/API/accounts/: io.py  routes.py
backend/src/API/profile/: io.py  routes.py
backend/src/database/: supabase_client.py  types.py
backend/src/globals/: environment.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.jsx  root.css
frontend/src/components/: classDisplay.tsx  classLink.tsx  search.tsx  singleSearch.tsx
frontend/src/requests/: axiosClient.ts
frontend/src/routes/account/: login.css  login.tsx  signup.tsx
frontend/src/routes/courses/: course.css  course.tsx  courseStudents.tsx
frontend/src/routes/coursesearchdb/: display.tsx
frontend/src/routes/profile/: courses.tsx  editProfile.tsx  editpro.tsx  profile.css  profile.tsx
frontend/src/types/: types.ts
